--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
+  height: 100vw;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.weather-wrapper {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+.main-icon {
+  width: 40px;
+  translate: 5px 15px;
+}
+ul,
+li {
+  list-style: none;
+}
+li {
+  margin: 8px;
+}
+.button {
+  background-color: white;
+  color: black;
+  font-size: 20px;
+  padding: 16px 24px;
+  border-radius: 50px;
+}
+.weather-input {
+  background-color: white;
+  color: rgb(51, 50, 50);
+  font-size: 20px;
+  padding: 16px 24px;
+  margin-right: 16px;
 }
