--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,12 @@ code {
     monospace;
 }
 .weather-wrapper {
+  margin-top: 100px;
+}
+.container {
   display: grid;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
 }
 .main-icon {
   width: 40px;
